
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2023 JUN 29a
  * in model/emfield/_test/emfield.c
    - in find_linearization_coefficients_inner_node_emfield(), fixed a bug: a "-=" operator
      should rather be a "+=" operator


2023 JUN 28a
  * in model/emfield/_Epotential/emfield.c
    - changed the function find_linearization_coefficients_inner_node_emfield() so that it uses
      _sigma_interface() instead of calculating it from the mobilities; this fixes a bug when
      the emfield cut is not at the same location as the fluid cut
  * in model/emfield/_Epotential-Bfixed/emfield.c
    - in find_linearization_coefficients_inner_node_emfield_DELTAVK(), fixed a bug: a "-=" operator
      should rather be a "+=" operator
       

2023 JUN 27a
  * in cycle/tsemf/_GS/tsemf.c
    - renamed np->bs->tsemfcoeff used by SOR2 to np->bs->tsemfcoeff2 because tsemfcoeff is used 
      by SOR
  * in model/emfield/_Epotential*/emfield.hh
    - added #define EMFIELD_SHARE
  * in model/fluid/_Navier-Stokes_plasma/fluid_bdry.c
    - in write_bdry_fluid_template(), added gammaeminus to the All(BDRY_WALLTFIXED1) template
  * in model/share/emfield_share.c
    - changed #ifdef EMFIELD to #ifdef EMFIELD_SHARE
  * in model/emfield
    - added _test emfield method that can be used with the non-plasma fluid modules
    

2023 JUN 26b
  * in model/fluid/_Favre-Reynolds_plasma/fluid_bdry.c
    - in update_bdry_wall(), fixed a bug with illegal memory space reading:
      now calls find_U_2() only when BDRYDIRECFOUND is TRUE; otherwise,
      calls update_bdry_outflow; 
  * in model/fluid/_Navier-Stokes_plasma/fluid_bdry.c
    - in write_bdry_fluid_template(), added param BDRY_WALLADIABATIC1 to BDRY_WALLADIABATIC1