@@ -7,6 +7,17 @@ ________________________________________________________________________________
 _____________________________________________________________________________________________________
 
 
+2023 JUN 30a
+  * in model/chem/_C2H4_Air_23s/chem.hh and model/chem/_C2H4_Air_Plasma_36s/chem.hh
+    - mapped SMAP_CHO to SMAP_HCO
+    - mapped SMAP_CH2O to SMAP_HCHO
+  * in model/thermo/_generic/enthalpy.c and model/thermo/_generic/thermo.c and 
+    model/transport/_Dixon-Lewis/transport.c, model/thermo/_generic/thermo.hh
+    - renamed species CHO to HCO
+    - renamed species CH2O to HCHO
+    - got rid of the second species HCO (redundant)
+
+
 2023 JUN 29a
   * in model/emfield/_test/emfield.c
     - in find_linearization_coefficients_inner_node_emfield(), fixed a bug: a "-=" operator
